Fix for #toTop on mobile layout Fix for LoL tournament names on home page

--- a/web/static/css/sass/small-screen.scss
+++ b/web/static/css/sass/small-screen.scss
@@ -431,7 +431,7 @@ header {
 }
 
 #toTop, #hint-helper {
-    display: none !important;
+    opacity: 0;
 }
 
 .right-containers .block {
